--- a/alabaster.toml
+++ b/alabaster.toml
@@ -2,6 +2,7 @@
 
 "ui.background" = {bg="bg"}
 "ui.text" = "fg"
+"ui.text.focus" = {bg="selected"}
 "ui.linenr" = {fg="fg_light"}
 "ui.linenr.selected" = {bg="bg", fg="fg"}
 "ui.selection" = {bg="selected"}
